# sigy

./: .cruft.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/contributing/: 1.-contributing-guide.md  4.-acknowledgements.md
examples/: basic.py  fastapi_depends.py  fastapi_depends_async.py  fastapi_depends_mixed.py  flask_api.py  hug_api.py
scripts/: clean.sh  lint.sh  test.sh
sigy/: __init__.py  inject.py  introspect.py
tests/: test_inject.py  test_smoke.py
